--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "qsanguosha-tools",
 	"displayName": "QSanguosha Tools",
-	"description": "",
+	"description": "太阳神三国杀Lua辅助工具",
 	"version": "0.0.1",
+	"icon": "icon.png",
+	"repository": {"url": "https://github.com/Notify-ctrl/qsanguosha-tools"},
 	"engines": {
-		"vscode": "^1.62.0"
+		"vscode": "^1.63.0"
 	},
 	"categories": [
 		"Other"
@@ -14,11 +16,6 @@
 	],
 	"main": "./extension.js",
 	"contributes": {
-	},
-	"scripts": {
-		"lint": "eslint .",
-		"pretest": "npm run lint",
-		"test": "node ./test/runTest.js"
 	},
 	"devDependencies": {
         "@types/vscode": "^1.63.0",
