--- a/package.json
+++ b/package.json
@@ -1,10 +1,26 @@
 {
-  "name": "qsanguosha-tools",
+	"name": "qsanguosha-tools",
 	"displayName": "QSanguosha Tools",
 	"description": "太阳神三国杀Lua辅助工具",
 	"version": "0.0.1",
 	"icon": "icon.png",
-	"repository": {"url": "https://github.com/Notify-ctrl/qsanguosha-tools"},
+	"author": {
+		"name": "notify-ctrl"
+	},
+	"publisher": "notify-ctrl",
+	"contributors": [
+		{
+			"name": "Ayayanami"
+		}
+	],
+	"license": "GPL-v3",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Notify-ctrl/qsanguosha-tools.git"
+	},
+	"bugs": {
+		"url": "https://github.com/Notify-ctrl/qsanguosha-tools/issues"
+	},
 	"engines": {
 		"vscode": "^1.63.0"
 	},
@@ -15,18 +31,16 @@
 		"*"
 	],
 	"main": "./extension.js",
-	"contributes": {
-	},
+	"contributes": {},
 	"devDependencies": {
-        "@types/vscode": "^1.63.0",
-        "@types/glob": "^7.2.0",
-        "@types/mocha": "^9.0.0",
-        "@types/node": "14.x",
-        "eslint": "^8.6.0",
-        "glob": "^7.2.0",
-        "mocha": "^9.1.3",
-        "typescript": "^4.5.4",
-        "@vscode/test-electron": "^2.0.3"
-    }
-
+		"@types/vscode": "^1.63.0",
+		"@types/glob": "^7.2.0",
+		"@types/mocha": "^9.0.0",
+		"@types/node": "14.x",
+		"eslint": "^8.6.0",
+		"glob": "^7.2.0",
+		"mocha": "^9.1.3",
+		"typescript": "^4.5.4",
+		"@vscode/test-electron": "^2.0.3"
+	}
 }
